--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -219,7 +219,9 @@
     transition: .3s;
   }
 
-  .nav__logo i {
+  .nav__logo img {
+    width: 100px;
+    height: 80px;
     font-size: 1.5em;
     color: var(--icon-color);
   }
@@ -755,7 +757,9 @@
     transition: .3s;
   }
   
-  .footer__logo i {
+  .footer__logo img {
+    width: 150px;
+    height: 200px;
     font-size: 1.5em;
     color: var(--icon-color);
   }
