--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -221,7 +221,7 @@
 
   .nav__logo img {
     width: 100px;
-    height: 80px;
+    height: 100px;
     font-size: 1.5em;
     color: var(--icon-color);
   }
@@ -381,16 +381,16 @@
   /*=============== BUTTONS ===============*/
   .button{
     display: inline-block;
-    background-color: var(--first-color);
+    background-color: var(--icon-color);
     color: #FFF;
     padding: 1rem 1.75rem;
     border-radius: .5rem;
-    font-weight: var(--font-medium);
+    font-weight: var(--hover-color);
     transition: .3s;
   }
   
   .button:hover{
-    background-color: var(--first-color-alt);
+    background-color: var(--hover-color);
   }
   
   .button__icon{
@@ -453,7 +453,94 @@
     color: var(--icon-color);
     margin-top: .15rem;
   }
-  
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: var(--mb-1);
+    border-radius: 16px;
+  }
+
+  .section__title-center {
+    margin-top: var(--mb-1-5);
+  }
+
+  .members {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  .team-mem {
+    margin: 8px;
+  }
+  .team{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 10px;
+    
+  }
+   h3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  @media screen and (max-width:960px) {
+    .team-mem {
+      flex: 100%;
+      max-width: 100%;
+    }
+  }
+  /*=============== TESTIMONIALS ===============*/
+.testimonials {
+  padding: 40px 0;
+  /* background: #f1f1f1; */
+  color: var(--text-color);
+  text-align: center;
+}
+.inner {
+  max-width: 1200px;
+  margin: auto;
+  overflow: hidden;
+  padding: 0 20px;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.col {
+  flex: 33.33%;
+  max-width: 33.33%;
+  box-sizing: border-box;
+  padding: 15px;
+}
+
+.testimonial {
+  background: rgb(250, 245, 245);
+  padding: 30px;
+  border-radius: 16px;
+}
+
+h3 {
+  font-size: 20px;
+  margin: 20px 0;
+}
+.stars {
+  color: var(--first-color-alt);
+  margin: 20px 0;
+}
+
+@media screen and (max-width:960px) {
+  .col {
+    flex: 100%;
+    max-width: 100%;
+  }
+}
   /*=============== STEPS ===============*/
   .steps__bg{
     background-color: var(--icon-color);
@@ -650,6 +737,9 @@
     transform: scale(1.1);
   }
 
+
+
+
   /*=============== QUESTIONS ===============*/
   .questions{
     background-color: var(--first-color-lighten);
@@ -835,7 +925,7 @@
   }
   
   .footer__logo img {
-    width: 150px;
+    width: 200px;
     height: 200px;
     font-size: 1.5em;
     color: var(--icon-color);
