--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -83,7 +83,7 @@
   
   body{
     margin: var(--header-height) 0 0 0;
-    background-color: var(--body-color);
+    background-color: rgb(250, 245, 245);
     color: var(--text-color);
     transition: .4s; /*For animation dark mode*/
   }
@@ -187,8 +187,8 @@
   /*=============== HEADER ===============*/
   .header{
     width: 100%;
-    background-color: var(--body-color);
-    position: fixed;
+    /* background-color: var(--body-color); */
+    position: absolute;
     top: 0;
     left: 0;
     z-index: var(--z-fixed);
@@ -220,8 +220,8 @@
   }
 
   .nav__logo img {
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 180px;
     font-size: 1.5em;
     color: var(--icon-color);
   }
@@ -243,14 +243,14 @@
   
   @media screen and (max-width: 767px){
     .nav__menu{
-      position: fixed;
-      background-color: var(--container-color);
+      position: absolute;
+      background-color: rgb(250, 245, 245);
       width: 80%;
       height: 100%;
       top: 0;
       right: -100%;
       box-shadow: -2px 0 4px hsla(var(--hue), 24%, 15%, .1);
-      padding: 4rem 0 0 3rem;
+      padding: 2rem 0 0 3rem;
       border-radius: 1rem 0 0 1rem;
       transition: .3s;
       z-index: var(--z-fixed);
@@ -272,7 +272,7 @@
   }
   
   .nav__link{
-    color: var(--title-color);
+    color: white;
     font-weight: var(--font-medium);
     transition: .3s;
   }
@@ -310,15 +310,31 @@
   /*=============== HOME ===============*/
   .home{
     padding: 3.5rem 0 2rem;
+    /* background: url(assets/img/20231005_071118.jpg); */
+    background-position: center;
+    background-size: cover;
+    background-color: transparent;
   }
   
   .home__container{
-    position: relative;
+    position: relative; 
     row-gap: 2rem;
+    animation: slideleft 1s linear forwards;
+  }
+  @keyframes slideleft {
+    0%{
+      transform: translate(100px);
+      opacity: 0;
+    }
+    100%{
+      transform: translate(0px);
+      opacity: 1;
+    }
   }
   
   .home__img{
-    width: 200px;
+    width: 300px;
+    height: auto;
     justify-self: center;
   }
   
@@ -487,11 +503,18 @@
     align-items: center;
     text-align: center;
   }
-  @media screen and (max-width:960px) {
+  @media screen and (max-width:320px) {
     .team-mem {
       flex: 100%;
+      display: block;
       max-width: 100%;
     }
+  }
+    @media screen and (max-width:650px) {
+      .members {
+        width: 100%;
+        display: block;
+      }
   }
   /*=============== TESTIMONIALS ===============*/
 .testimonials {
@@ -521,7 +544,7 @@
 }
 
 .testimonial {
-  background: rgb(250, 245, 245);
+  background: var(--body-color);
   padding: 30px;
   border-radius: 16px;
 }
@@ -1004,6 +1027,121 @@ h3 {
     color: var(--text-color-light);
     margin: 5rem 0 1rem;
   }
+  .container1{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 100px;
+    border-radius: 16px;
+    margin-top: 3rem;
+  }
+  
+  .container1:after{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background: url("img/bg.jpg") no-repeat center;
+    background-size: cover;
+    filter: blur(50px);
+    z-index: -1;
+  }
+  .contact-box{
+    max-width: 850px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: rgb(250, 245, 245);
+    /* box-shadow: 0px 0px 19px 5px rgba(0,0,0,0.19); */
+  }
+  
+  .left{
+    /* background: url("assets/img/20231005_062102.jpg") no-repeat center; */
+    background-size: cover;
+    height: 50%;
+    border-radius: 16px;
+  }
+  
+  .right{
+    padding: 25px 40px;
+  }
+  
+  h2{
+    position: relative;
+    padding: 0 0 10px;
+    margin-bottom: 10px;
+  }
+  
+  h2:after{
+    content: '';
+      position: absolute;
+      left: 50%;
+      bottom: 0;
+      transform: translateX(-50%);
+      height: 4px;
+      width: 50px;
+      border-radius: 2px;
+      /* background-color: #2ecc71; */
+  }
+  
+  .field{
+    width: 100%;
+    border: 2px solid rgba(0, 0, 0, 0);
+    outline: none;
+    background-color: white;
+    padding: 0.5rem 1rem;
+    font-size: 1.1rem;
+    margin-bottom: 22px;
+    transition: .3s;
+    border-radius: 8px;
+  }
+  
+  .field:hover{
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+  
+  textarea{
+    min-height: 150px;
+    border-radius: 8px;
+  }
+  
+  .btn{
+    width: 100%;
+    padding: 0.5rem 1rem;
+    background-color: var(--icon-color);
+    color: white;
+    font-size: 1.1rem;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    transition: .3s;
+    border-radius: 8px;
+  }
+  
+  .btn:hover{
+      background-color: var(--hover-color);
+  }
+  
+  .field:focus{
+      border: 2px solid rgba(30,85,250,0.47);
+      background-color: #fff;
+  }
+  
+  @media screen and (max-width: 880px){
+    .contact-box{
+      grid-template-columns: 1fr;
+    }
+    .left{
+      height: 200px;
+    }
+  }
   
   /*=============== SCROLL UP ===============*/
   .scrollup{
@@ -1110,11 +1248,18 @@ h3 {
       transform: scale(1.1);
     }
     .nav__logo img {
-      width: 100px;
-      height: 100px;
+      width: 80px;
+      height: 80px;
       font-size: 1.5em;
       color: var(--icon-color);
     }
+    .footer__logo img {
+      width: 80px;
+      height: 80px;
+      font-size: 1.5em;
+      color: var(--icon-color);
+    }
+    
   }
   
   /* For medium devices */
@@ -1163,6 +1308,18 @@ h3 {
       cursor: pointer;
       transform: scale(1.1);
     }
+    /* .nav__logo img {
+      width: 80px;
+      height: 80px;
+      font-size: 1.5em;
+      color: var(--icon-color);
+    } */
+    /* .footer__logo img {
+      width: 80px;
+      height: 80px;
+      font-size: 1.5em;
+      color: var(--icon-color);
+    } */
   }
   
   @media screen and (min-width: 767px){
