--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -517,6 +517,39 @@
         display: block;
       }
   }
+
+  
+  .row {
+    padding-top: 50px;
+    width: 1000px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .box{
+    width: 250px;
+    height: 500px;
+    background: white;
+    border-radius: 20px;
+    padding-right: 8px;
+    margin: 8px;
+    /* background-color: #000; */
+    opacity: .5;
+  }
+  .box h3 {
+    font-size: 25px;
+    padding-top: 20px;
+    color: black;
+    font-weight: 700;
+  }
+  .box ol li {
+    /* list-style-position: outside; */
+    color: black;
+    /* padding-top: 20px;
+    line-height: 25px; */
+    margin-left: 35px;
+  }
   /*=============== TESTIMONIALS ===============*/
 .testimonials {
   padding: 40px 0;
@@ -943,6 +976,32 @@ h3 {
     font-size: var(--smaller-font-size);
     z-index: 10;
   }
+
+  form{
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+   form h2 {
+    font-size: 26px;
+    line-height: 35px;
+    padding: 20px 0;
+   }
+   form input,
+   form textarea{
+    width: 100%;
+    padding: 12px 15px;
+    outline: none;
+    margin-bottom: 20px;
+    border: 1px solid #eea60a;
+   }
+   form button{
+    padding: 10px 10px;
+    border-radius: 5px;
+    background-color: #eea60a;
+    color: #fff;
+   }
   
   /*=============== FOOTER ===============*/
   .footer__container{
