--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1354,6 +1354,13 @@ h3 {
       font-size: 1.5em;
       color: var(--icon-color);
     }
+    .row{
+      margin-left: -270px;
+      flex-direction: column;
+    }
+    .box{
+      align-items: center;
+    }
     /* .home{
       padding: 3.5rem 0 13rem;
       background: url(assets/img/20231005_071118.jpg);
@@ -1625,6 +1632,7 @@ h3 {
       transform: scale(1.1);
     }
   }
+  
   
   @media screen and (min-width: 1200px){
     .home__social{
